<resources>
    <string name="app_name">Setu_X</string>
    <string name="enter_otp_here">Enter OTP here</string>
    <string name="verify_and_login">Verify and Login</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_mobile">Enter Mobile</string>
    <string name="welcome_to_dashboard">Welcome to Dashboard</string>
    <string name="logout">Logout</string>
    <string name="patient">Patient</string>
    <string name="hospital">Hospital</string>
    <string name="clinic">Clinic</string>
    <string name="select_type_of_user">Select type of User</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="enter_your_aadhaar_number">Enter your Aadhaar Number:</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="register_here">Register here!</string>
    <string name="register">Register</string>
    <string name="already_registered">Already registered?</string>
    <string name="login_here">Login here</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="new_patient">New Patient</string>
    <string name="medical_diagnosis_history">Medical Diagnosis History:</string>
    <string name="add_new_diagnosis">Add new diagnosis</string>
    <string name="submit">Submit</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="details">Details</string>
    <string name="prescription">Prescription</string>
    <string name="patient_information">Patient Information</string>
    <string name="by_team_phoenix">By Team Phoenix</string>
    <string name="who_are_you">Who are you?</string>
    <string name="please_select_one_of_the_options">Please select one of the options:</string>
    <string name="hospital_admin">Hospital Admin</string>
    <string name="next">Next</string>
    <string name="welcome">Welcome</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="enter_the_otp_received">Enter the OTP received:</string>
    <string name="aadhaar_number">Aadhaar Number</string>
    <string name="view_medical_history">View Medical History</string>
    <string name="verify_and_proceed">Verify and proceed</string>
    <string name="add_the_diagnosis_information">Add the diagnosis information</string>
    <string name="doctor_name">Doctor name</string>
    <string name="treatment">Treatment</string>
    <string name="done">Done</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="blood_group">Blood Group</string>
    <string name="gender">Gender</string>
    <string name="phone_number">Phone number</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="hospital_name_colon">Hospital Name:</string>
    <string name="registration_no_colon">Registration no:</string>
    <string name="email_colon">Email:</string>
    <string name="add_new_patient">Add new Patient</string>
    <string name="patients_diagnosed">Patients diagnosed</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_your_account">Create your account</string>
    <string name="registration_no">Registration no.</string>
    <string name="retype_password">Retype Password</string>
    <string name="medical_history">Medical History</string>
    <string name="address">Address</string>
    <string name="add_new_record">Add new record</string>
    <string name="welcome_admin">Welcome Admin!</string>
    <string name="verify_patient">Verify patient</string>
    <string name="enter_the_patient_s_aadhaar_number">Enter the patient\'s Aadhaar Number:</string>
    <string name="date_colon">Date:</string>
    <string name="hospital_colon">Hospital:</string>
    <string name="diagnosis_colon">Diagnosis:</string>
    <string name="details_colon">Details:</string>
    <string name="treatment_colon">Treatment:</string>
    <string name="prescription_colon">Prescription:</string>
    <string name="documentid_colon">DocumentID:</string>
    <string name="hindi" translatable="false">हिंदी</string>
    <string name="notifications" translatable="false">Notifications</string>
    <string name="by_theimperialone" translatable="false">-By TheImperialOne</string>
    <string name="upload_files" translatable="false">UPLOAD FILES</string>
    <string name="uploaded_file" translatable="false">Uploaded file:</string>
    <string name="uploaded_files_colon" translatable="false">Uploaded Files:</string>
    <string name="nearby_hospitals" translatable="false">NEARBY HOSPITALS</string>
    <string name="base_url" translatable="false">http://192.168.238.206/</string>
    <string-array name="blood_groups">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>

</resources>