<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".hospital.AddDiagnosisActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                app:cardBackgroundColor="#FAFAFA"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#808080"
                    android:padding="10dp"
                    android:src="@drawable/baseline_arrow_back_24" />
            </androidx.cardview.widget.CardView>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/nuni"
                android:text="@string/add_the_diagnosis_information"
                android:textSize="30sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/doctorInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/baseline_person_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/doctor_name"
                    android:inputType="text"
                    android:padding="15dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/diagnosisInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/baseline_app_registration_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/diagnosis"
                    android:inputType="text"
                    android:padding="15dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/detailsInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/baseline_content_paste_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/details"
                    android:inputType="textEmailAddress"
                    android:padding="15dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/treatmentInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/baseline_medical_services_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/treatment"
                    android:inputType="text"
                    android:longClickable="false"
                    android:padding="15dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/prescriptionInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/baseline_local_hospital_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/prescription"
                    android:inputType="text"
                    android:longClickable="false"
                    android:padding="15dp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/uploadedFileText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/nuni"
                android:text="@string/uploaded_file"
                android:textSize="20sp"
                android:visibility="gone"
                android:textStyle="normal|bold" />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/uploadedFileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/nuni"
                android:textSize="20sp"
                android:visibility="gone"
                android:textStyle="normal"/>
            <ImageView
                android:id="@+id/imgView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:visibility="gone"
                android:layout_gravity="center"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/upload_files"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/green"
                android:fontFamily="@font/nuni"
                android:padding="10dp"
                android:text="@string/upload_files"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:cornerRadius="15dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/done_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/green"
                android:fontFamily="@font/nuni"
                android:padding="20dp"
                android:text="@string/done"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:cornerRadius="15dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>